fixed vertical stretchiness

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -254,7 +254,8 @@ body {
   }
 
   .testimonials {
-    max-width: 77%;
+    max-width: 1350px;
+    max-height: 750px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
